--- a/sass/pages/_recursos.scss
+++ b/sass/pages/_recursos.scss
@@ -18,7 +18,7 @@ div.tituloRecursos{
     background: #090979;
     background: linear-gradient(250deg, rgba(9, 9, 121, 1) 0%, rgba(0, 212, 255, 1) 71%);
 
-    h1{
+    h2{
         font-family: "Montserrat", sans-serif;
         font-size: 1.5rem;
         text-shadow: 0px 8px 13px rgba(0,0,0,0.46);
@@ -27,6 +27,12 @@ div.tituloRecursos{
         text-underline-offset: 0.5rem;
         text-decoration-thickness: 0.2rem;
         text-decoration-color: ab.$naranja;
+
+        @include ab.breakpoint(tablet-horizontal){
+            margin-left: 2rem;
+            font-size: 2rem;
+            padding-bottom: 2rem;       
+        }
     }
 
    
@@ -39,6 +45,16 @@ section{
 .recursosExternos{
     padding-bottom: 0rem;
     background-color: whitesmoke;
+
+    @include ab.breakpoint(tablet-horizontal){
+        margin-left: 3rem;
+    }
+
+    @include ab.breakpoint(laptop){
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+    
     h2{
         font-size: 1rem;
         color: ab.$negro;
@@ -48,6 +64,11 @@ section{
           color: ab.$celeste;
         }
         margin-bottom: 1rem;
+
+        @include ab.breakpoint(tablet-horizontal){
+            font-size: 1.25rem;
+            margin-bottom: 2rem;
+        }
     }
 
     div.recursos{
@@ -55,20 +76,33 @@ section{
         flex-wrap: wrap;
         gap:1rem;
         margin-left: 1rem;
-        
+
         article{
             display: flex;
             flex-direction: row;
             gap: 1rem;
             justify-content: space-between;
             align-items: center;
+
+            @include ab.breakpoint(tablet-horizontal){
+                margin-left: auto;
+                margin-right: auto;
+                justify-content: space-evenly;
+            }
+
+
             img{
                 width: 50px;
                 height: 50px;
                 border-radius: 10px;
                 box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
               -webkit-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
-              -moz-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);  
+              -moz-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+              
+              @include ab.breakpoint(tablet-horizontal){
+                width: 80px;
+                height: 80px;
+              }
             }
             a{
                 font-family: "Libre Franklin", sans-serif;
@@ -90,6 +124,16 @@ section{
 }
 
 .websrelacionadas{
+
+    @include ab.breakpoint(tablet-horizontal){
+        margin-left: 3rem;
+    }
+
+     @include ab.breakpoint(laptop){
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+    
     h2{
         font-size: 1rem;
         color: ab.$negro;
@@ -99,6 +143,11 @@ section{
           color: ab.$naranja;
         }
         margin-bottom: 1rem;
+
+        @include ab.breakpoint(tablet-horizontal){
+            font-size: 1.25rem;
+            margin-bottom: 2rem;
+        }
     }
 
     div.webs{
@@ -106,6 +155,13 @@ section{
         flex-wrap: wrap;
         gap:1rem;
         margin-left: 1rem;
+
+        @include ab.breakpoint(tablet-horizontal){
+            flex-wrap: nowrap;
+            gap: 4rem;
+        }
+
+
         article{
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -114,6 +170,15 @@ section{
             grid-row-gap: 0;
             align-items: center;
 
+            @include ab.breakpoint(tablet-horizontal){
+                margin-left: auto;
+                margin-right: auto;
+                justify-content: space-evenly;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+            }
+
             img{
                 width: 50px;
                 height: 50px;
@@ -121,7 +186,12 @@ section{
                 border-radius: 10px;
                 box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
               -webkit-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
-              -moz-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);                
+              -moz-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+              
+              @include ab.breakpoint(tablet-horizontal){
+                width: 80px;
+                height: 80px;
+              }
             }
             a{
                 grid-area: 1 / 2 / 2 / 4;
@@ -145,6 +215,11 @@ section{
                 font-size: 0.75rem;
                 font-weight: 500;
                 color: ab.$azul;
+                @include ab.breakpoint(tablet-horizontal){
+                    
+                   text-align: center;
+                   
+                }
                 
             }
         }
